Bug 1713730 - Make 'border-image-repeat: space' paint correctly.  r=dholbert

Specifically: in DrawBackgroundImage (which we use to draw borders as well),
this patch makes us translate the anchor-point (together with our destination
rect), for each tiled call to DrawImageInternal.

Differential Revision: https://phabricator.services.mozilla.com/D116596